--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-  <title>Title</title>
+  <title>Java SE for the Impatient</title>
   
   <body>
-    <h1> Web site</h1>
+    <h1>Exercises from the book "Java SE for the Impatient"</h1>
   </body>
 </html>
